admin delete finished

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
-    "twilio": "^3.50.0"
+    "twilio": "^3.50.0",
+    "xlsx": "^0.16.9"
   }
 }
