--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.23.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "multer": "^1.4.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.0",
     "vue-clip": "^1.0.0",
     "vue-global-var": "^1.0.0",
     "vue-router": "^3.0.3",
+    "vue3-apexcharts": "^1.1.1",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^2.7.1",
