--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^1.19.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
