--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "node-apriori": "^1.0.0",
     "nodemon": "^1.19.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
