--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
     "apexcharts": "^3.23.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "jquery": "^3.5.1",
     "jspdf": "^2.2.0",
+    "jspdf-autotable": "^3.5.13",
     "multer": "^1.4.2",
+    "tableexport": "^5.2.0",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.6.0",
+    "vue-barcode": "^1.3.0",
     "vue-clip": "^1.0.0",
     "vue-global-var": "^1.0.0",
     "vue-router": "^3.0.3",
