--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "CLP Group",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^4.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
